# api/docs/swagger.json
@@ -592,7 +592,7 @@
         },
         "/customer/login": {
             "post": {
-                "description": "This api logs in customer account and returns message",
+                "description": "Customer login",
                 "consumes": [
                     "application/json"
                 ],
@@ -600,25 +600,25 @@
                     "application/json"
                 ],
                 "tags": [
-                    "customer"
+                    "auth"
                 ],
-                "summary": "customer login",
+                "summary": "Customer login",
                 "parameters": [
                     {
-                        "description": "customer",
-                        "name": "customer",
+                        "description": "login",
+                        "name": "login",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.LoginCustomer"
+                            "$ref": "#/definitions/models.CustomerLoginRequest"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.CustomerLoginResponse"
                         }
                     },
                     "400": {
@@ -1257,6 +1257,9 @@
                 "orders_count": {
                     "type": "integer"
                 },
+                "password": {
+                    "type": "string"
+                },
                 "phone": {
                     "type": "string"
                 },
@@ -1264,6 +1267,28 @@
                     "type": "integer"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CustomerLoginRequest": {
+            "type": "object",
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CustomerLoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
                     "type": "string"
                 }
             }
@@ -1461,17 +1486,6 @@
                     "type": "string"
                 },
                 "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.LoginCustomer": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "phone": {
                     "type": "string"
                 }
             }
