# api/models/auth.go
@@ -1,0 +1,16 @@
+package models
+
+type CustomerLoginRequest struct {
+	Login    string `json:"login"`
+	Password string `json:"password"`
+}
+
+type CustomerLoginResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type AuthInfo struct {
+	UserID   string `json:"user_id"`
+	UserRole string `json:"user_role"`
+}
